# vraw-lib

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.claude/hooks/: session-start.sh
cmake/: vrawConfig.cmake.in
examples/: example.cpp  vraw_info.cpp
include/: Encoding.h  VrawReader.h  VrawTypes.h  VrawWriter.h  vraw.h
src/: Encoding.cpp  VrawReader.cpp  VrawWriter.cpp
tests/: test_variants.cpp
